force-app/main/default/objects/Lead/fields/ESACHS_AprobacionRequerida__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_AprobacionRequerida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo tiene que ser true para poder pasar a la etapa de calificación en el caso de cumplirse las condiciones</description>
    <label>Aprobación Requerida</label>
    <type>Checkbox</type>
</CustomField>