force-app/main/default/objects/Lead/fields/ESACHS_calculoDiasHabiles__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_calculoDiasHabiles__c</fullName>
    <formula>CASE(
  WEEKDAY(DATEVALUE(CreatedDate)),
  1, CreatedDate + 2,
  2, CreatedDate + 2,
  3, CreatedDate + 2,
  4, CreatedDate + 2,
  5, CreatedDate + 2,
  6, CreatedDate + 1,
  CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Hábiles</label>
    <type>DateTime</type>
</CustomField>