force-app/main/default/objects/Lead/fields/ESACHS_DuracionDelServicio__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_DuracionDelServicio__c</fullName>
    <label>Duración del Servicio</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>