force-app/main/default/objects/Lead/fields/ESACHS_FechaEstimadaDeInicio__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_FechaEstimadaDeInicio__c</fullName>
    <label>Fecha estimada de inicio</label>
    <type>Date</type>
</CustomField>