force-app/main/default/objects/Lead/fields/ESACHS_KilometrosCiudadMasCercana__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_KilometrosCiudadMasCercana__c</fullName>
    <label>Kilómetros a ciudad más cercana</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>