force-app/main/default/objects/Lead/fields/ESACHS_LeadConversion__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_LeadConversion__c</fullName>
    <description>Campo para identificar las oportunidades y cuentas que vienen de conversiones de prospecto.</description>
    <formula>RecordType.DeveloperName == &apos;ESACHS_Ventas&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESACHS Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>