force-app/main/default/objects/Lead/fields/ESACHS_MetrosSobreElNivelDelMar__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_MetrosSobreElNivelDelMar__c</fullName>
    <label>Metros sobre el nivel del mar</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>