force-app/main/default/objects/Lead/fields/ESACHS_ProductosServiciosSolicitados__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_ProductosServiciosSolicitados__c</fullName>
    <description>Almacena  los productos, servicios y las características de la solicitud que vienen del formulario Web To Lead</description>
    <label>Productos y Servicios Solicitados</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>