force-app/main/default/objects/Lead/fields/ESACHS_SolicitudACHS__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_SolicitudACHS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud ACHS</label>
    <type>Checkbox</type>
</CustomField>