force-app/main/default/objects/Lead/fields/ESACHS_Zona__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Urbana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>