force-app/main/default/objects/Lead/recordTypes/ESACHS_Ventas.recordType-meta.xml
<RecordType>
    <fullName>ESACHS_Ventas</fullName>
    <active>true</active>
    <businessProcess>ESACHS_Ventas</businessProcess>
    <description>RT relacionado a la Venta de Servicios Complementarios o un Centro de Salud para gestionar y comenzar con el proceso de venta</description>
    <label>Ventas ESACHS</label>
</RecordType>