force-app/main/default/objects/Lead/validationRules/ESACHS_AprobacionRequerida.validationRule-meta.xml
<ValidationRule>
    <fullName>ESACHS_AprobacionRequerida</fullName>
    <active>true</active>
    <description>Validación para comprobar si es necesario pasar por el proceso de aprobación de Lead</description>
    <errorConditionFormula>AND(NOT(ISBLANK(RecordTypeId)),
RecordType.DeveloperName = &apos;ESACHS_Ventas&apos; 
,OR(ISPICKVAL(Status,&apos;Descartado&apos;),ISPICKVAL(Status,&apos;Convertido&apos;),ISPICKVAL(Status,&apos;ESACHS_Factibilidad&apos;),ISPICKVAL(Status,&quot;ESACHS_Calificado&quot;))
,ESACHS_AprobacionRequerida__c == False
,OR(ISPICKVAL(ESACHS_TipoDeServicio__c,&apos;Centro de Salud&apos;),ISPICKVAL(ESACHS_TipoDeServicio__c,&apos;VSC Largo&apos;)))</errorConditionFormula>
    <errorMessage>Es necesario pasar el proceso de validación</errorMessage>
</ValidationRule>