force-app/main/default/objects/Lead/listViews/ESACHS_factibilidadPrevencionCentroSalud_Lead.listView-meta.xml
<ListView>
    <fullName>ESACHS_factibilidadPrevencionCentroSalud_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.ESACHS_Ventas</value>
    </filters>
    <filters>
        <field>ESACHS_TipoDeServicio__c</field>
        <operation>equals</operation>
        <value>Centro de Salud</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>ESACHS_Factibilidad</value>
    </filters>
    <label>Factibilidad Prevención-Centro de Salud</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>ESACHS_FactibilidadPrevencionCentroSalud</group>
    </sharedTo>
</ListView>