force-app/main/default/objects/Lead/listViews/ESACHS_Gerencia_Lead.listView-meta.xml
<ListView>
    <fullName>ESACHS_Gerencia_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>ESACHS - Gerencia</label>
    <queue>ESACHS_Gerencia</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>