force-app/main/default/objects/Lead/listViews/ESACHS_VentaServiciosComplementarios.listView-meta.xml
<ListView>
    <fullName>ESACHS_VentaServiciosComplementarios</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>RUT_Empresa__c</columns>
    <columns>ESACHS_TipoDeServicio__c</columns>
    <columns>ESACHS_AdministracionDelSeguroLey__c</columns>
    <columns>ESACHS_SolicitudACHS__c</columns>
    <columns>ESACHS_AporteACHS__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.ESACHS_Ventas</value>
    </filters>
    <filters>
        <field>ESACHS_AdministracionDelSeguroLey__c</field>
        <operation>notEqual</operation>
        <value>ACHS</value>
    </filters>
    <filters>
        <field>ESACHS_TipoDeServicio__c</field>
        <operation>equals</operation>
        <value>VSC Corto,VSC Largo</value>
    </filters>
    <label>Venta de Servicios Complementarios</label>
    <queue>ESACHS_ProspectosESACHS</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>ESACHS_GerenciaComercialYOperaciones</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>